# UAV_physics_engine

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  aircraft_8cpp.html  aircraft_8cpp.js  aircraft_8cpp__incl.dot  aircraft_8hpp.html  aircraft_8hpp__dep__incl.dot  aircraft_8hpp__incl.dot  aircraft_8hpp_source.html  aircraft__comm_8cpp.html  aircraft__comm_8cpp__incl.dot  aircraft__impulse_8cpp.html  aircraft__impulse_8cpp__incl.dot  annotated.html  annotated_dup.js  atmosphere_8cpp.html  atmosphere_8cpp__incl.dot  atmosphere_8hpp.html  atmosphere_8hpp__dep__incl.dot  atmosphere_8hpp__incl.dot  atmosphere_8hpp_source.html  class_aircraft-members.html  class_aircraft.html  class_aircraft.js  class_aircraft__coll__graph.dot  class_atmosphere-members.html  class_atmosphere.html  class_atmosphere.js  class_forces-members.html  class_forces.html  class_matrices-members.html  class_matrices.html  class_params-members.html  class_params.html  class_params.js  class_simulation-members.html  class_simulation.html  class_simulation.js  (+116 more)
.github/workflows/: doxygen.yml  update.yml
docs/latex/: aircraft_8cpp.tex  aircraft_8cpp.tex.tmp  aircraft_8cpp__incl.dot  aircraft_8hpp.tex  aircraft_8hpp__dep__incl.dot  aircraft_8hpp__incl.dot  aircraft__comm_8cpp.tex  aircraft__comm_8cpp__incl.dot  aircraft__impulse_8cpp.tex  aircraft__impulse_8cpp__incl.dot  annotated.tex  atmosphere_8cpp.tex  atmosphere_8cpp__incl.dot  atmosphere_8hpp.tex  atmosphere_8hpp__dep__incl.dot  atmosphere_8hpp__incl.dot  class_aircraft.tex  class_aircraft__coll__graph.dot  class_atmosphere.tex  class_forces.tex  class_matrices.tex  class_params.tex  class_simulation.tex  control_8cpp.tex  control_8cpp__incl.dot  control_8hpp.tex  control_8hpp__dep__incl.dot  control_8hpp__incl.dot  defines_8hpp.tex  defines_8hpp__dep__incl.dot  dir_101da30fc6c118b726c448f5a6ab9e53.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf.tex  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.dot  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_90d6d3b7fc4e97e0c118e24a6d21bc0e.tex  dir_d73d1ee04cc237a5854777ea99c55872.tex  dir_d73d1ee04cc237a5854777ea99c55872_dep.dot  files.tex  forces_8cpp.tex  (+49 more)
gtest/: CMakeLists.txt  mainTest.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_0.js  functions_1.js  functions_2.js  (+32 more)
src/: RK4.cpp  RK4.hpp  RK4.tpp  atmosphere.hpp  config.xml  constants.cpp  constants.hpp  control.cpp  control.hpp  defines.hpp  forces.cpp  forces.hpp  main.cpp  matrices.cpp  matrices.hpp  params.cpp  params.hpp  simulation.cpp  simulation.hpp  status.hpp  timed_loop.cpp  timed_loop.hpp  uav_params.cpp  uav_params.hpp  uav_state.cpp  uav_state.hpp
src/aircraft/: aircraft.cpp  aircraft.hpp  aircraft_comm.cpp  aircraft_impulse.cpp
src/aircrafts/: aircraft.cpp  aircraft.hpp  aircraft_comm.cpp  aircraft_impulse.cpp  copter.hpp  rocket.hpp
src/components/: aero_cofficients.hpp  components.hpp  control_surfaces.cpp  control_surfaces.hpp  drive.cpp  drive.hpp  hinge.cpp
src/drives/: drive.cpp  hinge.hpp
src/dynamic/: forces.cpp  forces.hpp  matrices.cpp  matrices.hpp
src/simulation/: atmosphere.cpp  atmosphere.hpp  control.cpp  control.hpp  simulation.cpp  simulation.hpp  uav_state.cpp  uav_state.hpp
tests/: test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  zmq_client.py  zmq_recv.py  zmq_recv_last.py  zmq_send.py  zmq_send_tcp.py
